--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,27 +2,27 @@ name: Tests
 on:
   push:
     branches: [main, stable]
-    paths-ignore: ['docs/**', '*.md', '*.rst']
+    paths-ignore: ["docs/**", "*.md", "*.rst"]
   pull_request:
-    paths-ignore: [ 'docs/**', '*.md', '*.rst' ]
+    paths-ignore: ["docs/**", "*.md", "*.rst"]
 jobs:
   tests:
     name: ${{ matrix.name || matrix.python }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - {python: '3.13'}
-          - {python: '3.12'}
-          - {name: Windows, python: '3.12', os: windows-latest}
-          - {name: Mac, python: '3.12', os: macos-latest}
-          - {python: '3.11'}
-          - {python: '3.10'}
-          - {python: '3.9'}
-          - {python: '3.8'}
-          - {python: '3.7'}
-          - {name: PyPy, python: 'pypy-3.10', tox: pypy310}
+          - { python: "3.13" }
+          - { python: "3.12" }
+          - { name: Windows, python: "3.12", os: windows-latest }
+          - { name: Mac, python: "3.12", os: macos-latest }
+          - { python: "3.11" }
+          - { python: "3.10" }
+          - { python: "3.9" }
+          - { python: "3.8" }
+          - { python: "3.7" }
+          - { name: PyPy, python: "pypy-3.10", tox: pypy310 }
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version: '3.x'
+          python-version: "3.x"
           cache: pip
           cache-dependency-path: requirements*/*.txt
       - name: cache mypy
